# ChangeLog for mail-filter/qsf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Nov 2009; James Rowe <jnrowe@gmail.com> qsf-1.2.7.ebuild:
  Switched to EAPI 2.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> qsf-1.2.7.ebuild:
  Keyworded amd64.

  21 May 2009; James Rowe <jnrowe@gmail.com> qsf-1.2.7.ebuild:
  Keyworded ~amd64.

  07 May 2009; James Rowe <jnrowe@gmail.com> qsf-1.2.7.ebuild:
  Whitespace removal, to fix pcheck warning.

*qsf-1.2.7 (21 Apr 2009)

  21 Apr 2009; jnrowe@gmail.com +metadata.xml, +qsf-1.2.7.ebuild:
  Imported from pre-github misc overlay.
