@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST qsf-1.2.7.tar.bz2 181061 RMD160 84d74e98144c241b583fab1ed4c727b09a1eaec4 SHA1 6292e4d7c34c9aacb5484ca40b08e72446fa987e SHA256 2caf3c066228217f70556af931c36a6f22c23823abbd52ff97835ca93cf3dab4
-EBUILD qsf-1.2.7.ebuild 880 RMD160 96e6514092c76d5b6b86122ffcfabc9b35d9ab48 SHA1 110df3a80e8010af2769eef1be665b9fa58dd11e SHA256 faf4388548215f28404bbba73bd227b650dc3c66d590e929f0e317e5ab0d3829
-MISC ChangeLog 612 RMD160 45266a263e9e2513437307d1a4baddbe42b407f4 SHA1 b3060dfc396388c07a0b9e48e3e84f974f73beac SHA256 1fbc75a1601db1b201cb8e1556f4d1e7fd242a6ac5e8656722f4dc8d568fe690
+EBUILD qsf-1.2.7.ebuild 753 RMD160 31237587add346fc5f14e6268877cfa9859207fc SHA1 fcd8188cf9f8eeaaf5ecaed144b38e3a8a5d5b81 SHA256 faf0aee3ddccdb3fc63e121caffecf55073d0215785bc373058ee0a6ac5dc505
+MISC ChangeLog 722 RMD160 95b90896d0dacbe46c5ec0b30ff8f7fbe5c78c72 SHA1 3d4d805cb76b54e3a8869fad365468d6b492cfb0 SHA256 8fc346c2e57540147c2e31a8fbf1880e5d140ec4b764f178d443839ec1fceb48
 MISC metadata.xml 974 RMD160 24bf55626feaf5df10a4438275c6b5d6accc71b3 SHA1 8aa12ad9fa95685fcd0f3fbabf43afd5b7086a35 SHA256 d7a86b3f5dce4645bfc82ce064d2bdd9d2a0cc657f52332aad2aa0dcfad53332
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkux220ACgkQzJrj3cAXR0ndFQCgr5AtKdWg76HbQaCrp3AqcELc
-nEMAn1Ju8w4WTUgvkzTvhNNQdpY/We/s
-=oKXn
+iEYEARECAAYFAkwQWHEACgkQzJrj3cAXR0m+pwCeKScET0Hnqok1qXpNB7eDkywO
+76kAoLoP8JPN+W2ToBM2OSZMJkWTIf2d
+=Jnme
 -----END PGP SIGNATURE-----
