@@ -1,8 +1,10 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="2"
+EAPI=3
+
+inherit base
 
 DESCRIPTION="Quick Spam Filter, with support for multiple databases"
 HOMEPAGE="http://www.ivarch.com/programs/qsf.shtml"
@@ -20,16 +22,11 @@ DEPEND="gdbm? ( sys-libs/gdbm )
 	sqlite? ( dev-db/sqlite:0 )"
 RDEPEND="${DEPEND}"
 
+DOCS=(README doc/{NEWS,TODO,changelog,postfix-howto})
+
 src_configure() {
 	econf \
 		$(use_with gdbm) \
 		$(use_with mysql) \
 		$(use_with sqlite)
-}
-
-src_install () {
-	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc README || die "dodoc failed"
-	cd doc
-	dodoc NEWS TODO changelog postfix-howto || die "dodoc in doc failed"
 }
